<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/root_view"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.croquis.zigzag_shop_login.LoginActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay"
        app:elevation="0dp">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"
            app:contentInsetLeft="0dp"
            app:contentInsetStart="0dp">
            <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <ImageView
                    android:src="@drawable/ic_arrow_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"/>
                <TextView
                    android:text="로그인"
                    android:textColor="#000000"
                    android:textSize="15sp"
                    android:textStyle="bold"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintRight_toRightOf="parent"/>
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.Toolbar>

        <View
            android:background="#757575"
            android:layout_width="match_parent"
            android:layout_height="0.5dp" />
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:gravity="center"
            app:layout_behavior="@string/appbar_scrolling_view_behavior"
            tools:context="com.croquis.zigzag_shop_login.LoginActivity"
            tools:showIn="@layout/activity_login">

            <ImageView
                android:id="@+id/img_login"
                android:src="@drawable/img_login"
                android:layout_width="200dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintRight_toRightOf="parent"/>

            <android.support.v4.widget.Space
                android:id="@+id/margin_space"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:layout_marginBottom="22dp"
                app:layout_constraintBottom_toBottomOf="@+id/img_login"
                app:layout_constraintLeft_toLeftOf="@id/img_login"
                app:layout_constraintRight_toRightOf="@id/img_login" />

            <TextView
                android:id="@+id/tv_intro_0"
                android:text="@string/login_intro_0"
                android:textSize="15sp"
                android:textColor="#000000"
                android:layout_width="280dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_horizontal"
                android:layout_below="@id/img_login"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/margin_space"/>

            <TextView
                android:id="@+id/tv_intro_1"
                android:text="@string/login_intro_1"
                android:textColor="#BDBDBD"
                android:textSize="10sp"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:gravity="center_horizontal"
                android:maxLines="3"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/tv_intro_0"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_intro_0"/>

            <android.support.constraint.ConstraintLayout
                android:id="@+id/body"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/tv_intro_1"
                app:layout_constraintBottom_toTopOf="@+id/autologin_agree_success"
                app:layout_constraintVertical_bias="1.0">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/user"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="8dp"
                    android:src="@drawable/img_user"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <EditText
                    android:id="@+id/et_user_id"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_marginLeft="10dp"
                    android:background="@android:color/transparent"
                    android:hint="꽃피는시절 아이디"
                    android:inputType="textEmailAddress"
                    android:textSize="12sp"
                    app:layout_constraintLeft_toRightOf="@+id/user"
                    app:layout_constraintTop_toTopOf="parent" />

                <View
                    android:id="@+id/separator_0"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="8dp"
                    android:background="#BDBDBD"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_user_id" />


                <ImageView
                    android:id="@+id/pwd"
                    android:layout_width="32dp"
                    android:layout_height="32dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="10dp"
                    android:src="@drawable/ic_pwd"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/separator_0" />

                <EditText
                    android:id="@+id/et_user_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="32dp"
                    android:layout_marginLeft="10dp"
                    android:layout_marginTop="10dp"
                    android:background="@android:color/transparent"
                    android:hint="패스워드"
                    android:inputType="textPassword"
                    android:textSize="12sp"
                    app:layout_constraintLeft_toRightOf="@+id/pwd"
                    app:layout_constraintTop_toBottomOf="@+id/separator_0" />

                <View
                    android:id="@+id/separator_1"
                    android:layout_width="match_parent"
                    android:layout_height="0.5dp"
                    android:layout_marginTop="8dp"
                    android:background="#BDBDBD"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/et_user_pwd" />

                <RelativeLayout
                    android:id="@+id/rl_autologin_agree"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="15dp"
                    android:clickable="true"
                    android:visibility="gone"
                    android:paddingLeft="8dp"
                    android:paddingRight="8dp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/separator_1">

                    <TextView
                        android:id="@+id/tv_autologin_0"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentLeft="true"
                        android:layout_centerInParent="true"
                        android:textSize="12sp"
                        android:text="@string/autologin_0"
                        android:textColor="@color/colorAccent" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:textSize="12sp"
                        android:layout_toRightOf="@+id/tv_autologin_0"
                        android:text="@string/autologin_1"
                        android:textColor="#000000" />

                    <ImageView
                        android:id="@+id/img_agreement_check"
                        android:layout_width="32dp"
                        android:layout_height="32dp"
                        android:layout_alignParentRight="true"
                        android:layout_centerInParent="true"
                        android:duplicateParentState="true"
                        android:src="@drawable/agree_unchecked_selector" />
                </RelativeLayout>

                <RelativeLayout
                    android:id="@+id/rl_login"
                    android:layout_width="match_parent"
                    android:layout_height="50dp"
                    android:layout_marginTop="15dp"
                    android:background="@color/colorAccent"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rl_autologin_agree">

                    <TextView
                        android:id="@+id/tv_login"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:text="@string/login"
                        android:textColor="@color/colorPrimary"
                        android:textStyle="bold" />

                    <com.wang.avi.AVLoadingIndicatorView
                        android:id="@+id/progress_spin"
                        style="@style/AVLoadingIndicatorView.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_centerInParent="true"
                        android:visibility="invisible"
                        app:indicatorName="LineSpinFadeLoaderIndicator" />
                </RelativeLayout>

                <TextView
                    android:id="@+id/find_id_pwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingTop="20dp"
                    android:paddingBottom="20dp"
                    android:text="@string/find_id_pwd"
                    android:textColor="#BDBDBD"
                    android:textSize="12sp"
                    app:layout_constraintLeft_toLeftOf="parent"
                    app:layout_constraintRight_toRightOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/rl_login" />
            </android.support.constraint.ConstraintLayout>
            <TextView
                android:id="@+id/autologin_agree_success"
                android:text="@string/autologin_agreement"
                android:textColor="#BDBDBD"
                android:textSize="12sp"
                android:background="#EEEEEE"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:gravity="center"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintBottom_toBottomOf="parent" />
        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

</android.support.design.widget.CoordinatorLayout>
